CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2019
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2019.Sep.25 (0.9.24)
  * New tools
    ---------
    * Fill
      Not actually a new tool, but promoted from a "Magic" tool
      to a full-fledge tool in the "Tools" bar.  However, also
      avoids filling "Undo" buffer with snapshots of the drawing,
      if the fill does nothing (e.g., if you click the same spot
      a second time).

  * Ports & Building
    ----------------
    * Updates to build on Haiku.
      Luc 'Begasus' Schrijvers <begasus@gmail.com>

    * Replaced KDE (older, KDE4, in fact) specific icon and
      launcher (.desktop file) installation & uninstallaton
      invocations in Makefile with those that use Freedesktop.org
      `xdg-...` tools.

  * Other Improvements
    ------------------
    * Added ability to move color palette options to the end of
      the New dialog, for situations where users are meant to start
      drawings with specific Starters or Templates.
      Use "--newcolorslast" option.
      (Suggested by Bernard Verhaeghe)

    * Recognize signals (SIGUSR1 and SIGUSR2) on POSIX systems,
      which causes Tux Paint to quit, first saving the current drawing
      (if unsaved) (like "--autosave"), either saving a new image
      (like "--saveovernew") (via SIGUSR1), or overwritting the current
      drawing (like "--saveover") (via SIGUSR2).
      (Thanks to Flavio Airundo for the idea; closes
      https://sourceforge.net/p/tuxpaint/feature-requests/188/)

    * Updated most parts of the code that were throwing warnings in GCC.

    * Build process generates thumbnails of included Starters and Templates.
      When installed, this greatly increases the speed of the "New" dialog.

    * Updated some Starter source images so they work better with
      flood fill (Bald Eagle, World map, Gecko).
