@@ -17,12 +17,12 @@ version
 </h1>
 <h3>A simple drawing program for children</h3>
 
-<p>Copyright 2002-2019 by various contributors; see AUTHORS.txt<br>
+<p>Copyright 2002-2020 by various contributors; see AUTHORS.txt<br>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 <p>June 14, 2002 -
 
-					September 21, 2019</p>
+					March 15, 2019</p>
 
 </center>
 
