@@ -2,13 +2,13 @@ CHANGES.txt for Tux Paint
 
 Tux Paint - A simple drawing program for children.
 
-Copyright (c) 2002-2019
+Copyright (c) 2002-2020
 Various contributors (see below, and AUTHORS.txt)
 http://www.tuxpaint.org/
 
 $Id$
 
-2019.Sep.25 (0.9.24)
+2020.Mar.25 (0.9.24)
   * New tools
     ---------
     * Fill
@@ -35,6 +35,9 @@ $Id$
       drawings with specific Starters or Templates.
       Use "--newcolorslast" option.
       (Suggested by Bernard Verhaeghe)
+
+    * Show progress bar while loading (more) stamps, to avoid
+      looking hung on slower systems or with complicated stamp images.
 
     * Recognize signals (SIGUSR1 and SIGUSR2) on POSIX systems,
       which causes Tux Paint to quit, first saving the current drawing
